--- a/olaf/rest_api/templates/os_command.html
+++ b/olaf/rest_api/templates/os_command.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang='en'>
-<head>
-  <title>{{title}}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
   <style>
-    #title {
-      text-align: center;
-    }
     #page {
       justify-content: center;
       display: flex;
@@ -27,10 +21,6 @@
       width: 100%;
     }
   </style>
-  <div id='title'>
-    <h2 id='pageTitle'>OS Command</h2>
-    <br/>
-  <div>
   <div id='page'>
     <div id='abc'>
       <a>Status: </a><span id='status'></span>
@@ -56,52 +46,32 @@
         255: 'EXECUTING',
     };
 
-    function runCommand() {
+    async function runCommand() {
       // clear last reply
       document.getElementById('reply').value = '';
 
       // reset field incase of very quick commands
       document.getElementById('status').textContent = 'EXECUTING';
 
-      const options = {
-        'method': 'PUT',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        'body': JSON.stringify({
-          'value': document.getElementById('command').value,
-        }),
-      };
+      const value = document.getElementById('command').value;
 
-      fetch(`http://${window.location.host}/od/0x1023/0x01`, options)
-        .then(response => response.json())
-        .then(data => {
-          if (data.error !== undefined) {
-            alert(data.error);
-          }
-        });
+      writeValue('0x1023', '0x01', btoa(value));
     }
 
-    function updateStatus() {
+    async function updateStatus() {
       const reply_states = ['NO_ERROR_REPLY', 'ERROR_REPLY'];
 
-      fetch(`http://${window.location.host}/od/0x1023/0x02`, {'method': 'GET'})
-        .then(response => response.json())
-        .then(data => {
-          const status = document.getElementById('status');
-          const new_status = states[data['value']];
+      const statusObj = await readValue('0x1023', '0x02');
+      const status = document.getElementById('status');
+      const newStatus = states[statusObj['value']];
 
-          // state has change to a new state with a reply, display reply
-          if (status.textContent === 'EXECUTING' && reply_states.includes(new_status)) {
-            fetch(`http://${window.location.host}/od/0x1023/0x03`, {'method': 'GET'})
-              .then(response => response.json())
-              .then(data => {
-                document.getElementById('reply').value = atob(data['value']);
-              });
-          }
+      // state has change to a new state with a reply, display reply
+      if (status.textContent === 'EXECUTING' && reply_states.includes(newStatus)) {
+        const replyObj = await readValue('0x1023', '0x03');
+        document.getElementById('reply').value = atob(replyObj['value']);
+      }
 
-          status.textContent = new_status;
-        });
+      status.textContent = newStatus;
     }
 
     runCommand();
@@ -110,5 +80,4 @@
       updateStatus()
     }, 1000);
   </script>
-</body>
-</html>
+{% endblock %}
