fixed unittes for src code restructure

--- a/olaf/_internals/rest_api/templates/od.html
+++ b/olaf/_internals/rest_api/templates/od.html
@@ -20,11 +20,11 @@
       display: none;
     }
   </style>
-  <label for="objIndex">Index:</label>
-  <input type="text" id="objIndex" name="objIndex" placeholder="0x1000"/>
-  <label for="objSubindex">Subindex:</label>
-  <input type="text" id="objSubindex" name="objSubindex" placeholder="0x00"/>
-  <button onclick='getObjectInfo()'>Get Info</button>
+  <label for='objIndex'>Index:</label>
+  <input type='text' id='objIndex' name='objIndex' placeholder='0x1000'/>
+  <label for='objSubindex'>Subindex:</label>
+  <input type='text' id='objSubindex' name='objSubindex' placeholder='0x00'/>
+  <button onclick="getObjectInfo()">Get Info</button>
   <br/>
   <br/>
   <div id='variableObj'>
@@ -52,9 +52,9 @@
     </table>
     <br/>
     <div id='varNewValueInput'>
-      <label for="objNewValue">New Value:</label>
-      <input type="text" id="objNewValue" name="objNewValue"/>
-      <button id='setObjectValueButton' onclick='setObjectValue()'>Change</button>
+      <label for='objNewValue'>New Value:</label>
+      <input type='text' id='objNewValue' name='objNewValue'/>
+      <button id='setObjectValueButton' onclick="setObjectValue()">Change</button>
     </div>
   </div>
   <div id='arrayRecordObj'>
@@ -75,37 +75,42 @@
   </div>
   <script>
     async function updateData() {
-      const index = document.getElementById("objIndex").value;
-      const subindex = document.getElementById("objSubindex").value;
+      const index = document.getElementById('objIndex').value;
+      const subindex = document.getElementById('objSubindex').value;
+
+      if (index === '') {
+        alert('requires at least the index field to be set')
+        return;
+      }
 
       const obj = await readValue(index, subindex);
 
       if (obj['error'] !== undefined) {
-        document.getElementById("variableObj").style.display = 'none';
-        document.getElementById("arrayRecordObj").style.display = 'none';
+        document.getElementById('variableObj').style.display = 'none';
+        document.getElementById('arrayRecordObj').style.display = 'none';
 
         alert(obj['error']);
       } else if (obj['object_type'] === 'VARIABLE') {
-        document.getElementById("variableObj").style.display = 'inline';
-        document.getElementById("arrayRecordObj").style.display = 'none';
+        document.getElementById('variableObj').style.display = 'inline';
+        document.getElementById('arrayRecordObj').style.display = 'none';
 
-        document.getElementById("varName").textContent = obj['name'];
-        document.getElementById("varDataType").textContent = obj['data_type'];
-        document.getElementById("varAccessType").textContent = obj['access_type'];
-        document.getElementById("varValue").textContent = obj['value'];
+        document.getElementById('varName').textContent = obj['name'];
+        document.getElementById('varDataType').textContent = obj['data_type'];
+        document.getElementById('varAccessType').textContent = obj['access_type'];
+        document.getElementById('varValue').textContent = obj['value'];
 
         if (obj['access_type'] === 'ro' || obj['access_type'] === 'const') {
-          document.getElementById("varNewValueInput").style.display = 'none';
+          document.getElementById('varNewValueInput').style.display = 'none';
         } else {
-          document.getElementById("varNewValueInput").style.display = 'inline';
+          document.getElementById('varNewValueInput').style.display = 'inline';
         }
       } else {
-        document.getElementById("variableObj").style.display = 'none';
-        document.getElementById("arrayRecordObj").style.display = 'inline';
+        document.getElementById('variableObj').style.display = 'none';
+        document.getElementById('arrayRecordObj').style.display = 'inline';
 
-        document.getElementById("objType").textContent = obj['object_type'];
-        document.getElementById("objName").textContent = obj['name'];
-        document.getElementById("objSubindexes").textContent = obj['subindexes'];
+        document.getElementById('objType').textContent = obj['object_type'];
+        document.getElementById('objName').textContent = obj['name'];
+        document.getElementById('objSubindexes').textContent = obj['subindexes'];
       }
     }
 
@@ -114,6 +119,15 @@
     }
 
     function setObjectValue() {
+      const index = document.getElementById('objIndex').value;
+      const subindex = document.getElementById('objSubindex').value;
+      const value = document.getElementById('varNewValueInput').value;
+
+      if (index === '') {
+        alert('requires at least the index field to be set')
+        return;
+      }
+
       writeValue(index, subindex, value);
     }
   </script>
