--- a/olaf/_internals/rest_api/templates/od.html
+++ b/olaf/_internals/rest_api/templates/od.html
@@ -13,7 +13,7 @@
       text-align: left;
       padding: 8px;
     }
-    a, label {
+    label {
       font-weight: bold;
     }
     #variableObj, #arrayRecordObj, #varNewValueInput {
